--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="#projects" class="menu-btn">Projects</a>
                 </li>
                 <li>
-                    <a href="#contact" class="menu-btn">Contact</a>
+<!--                     <a href="#contact" class="menu-btn">Contact</a> -->
                 </li>
             </ul>
             <div class="menu-btn">
@@ -73,7 +73,7 @@
             <h2 class="title fadein">About </h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="" alt="Akshay Kumar">
+                    <img src="fotos-mCqh2aH6CmU-unsplash.jpg" alt="Akshay Kumar">
                     <div>
                         <!-- <div class="wrapper">
                             <div class="button1">
@@ -132,7 +132,7 @@
                 <div class="column right">
                     <div class="info">
                         <a href="     " target="_blank" rel="noreferrer">
-                            <img src="./Images/html-clipart-image.jpg" alt="HTML" width="80" />
+                            <img src="source.gif" alt="HTML" width="80" />
                         </a>
                         <!-- <a href="https://www.w3schools.com/Css/" target="_blank" rel="noreferrer">
                             <img src="./Images/css.png" alt="css" width="80" />
@@ -190,7 +190,7 @@
                 <div class="card">
                     <a href=" " target="_blank" rel="noreferrer" title=" ">
                         <div class="box">
-                            <img src="./Images/success2.jpg" alt=" ">
+                            <img src="istockphoto-532548823-612x612.jpg" alt=" ">
 
                         </div>
                     </a>
@@ -204,7 +204,7 @@
                 <div class="card">
                     <a href="h " target="_blank" rel="noreferrer" title=" ">
                         <div class="box">
-                            <img src="./Images/poet.jpg" alt=" ">
+                            <img src=".istockphoto-473257565-640x640.jpg" alt=" ">
 
                         </div>
                     </a>
@@ -217,7 +217,7 @@
                 <div class="card">
                     <a href=" " target="_blank" rel="noreferrer" title=" ">
                         <div class="box">
-                            <img src="./Images/book11.jpg" alt=" ">
+                            <img src="source.gif" alt=" ">
 
                         </div>
                     </a>
@@ -225,7 +225,7 @@
                         
                     </a>
 
-                    <p>My Book</p>
+                    <p>  </p>
                 </div>
             </div>
         </div>
