--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
                         </span>
                     </div>
                     <p>Gleneagles Global Hospitals is a leading multi-specialty healthcare provider in India, known for advanced treatments and expertise in organ transplants. Founded in 1999, it operates major hospitals in Chennai, Hyderabad, Bengaluru, and Mumbai. The network is part of IHH Healthcare and is NABH and NABL accredited. With cutting-edge technology and international collaborations, it delivers world-class care across specialties like cardiology, neurology, gastroenterology, and orthopedics, serving both domestic and international patients.
- <br> At present I look forward to the upcomming new TECHNO WORLD. Being a part of
-            that. <br> </p>
+ <br> At present I look forward to the upcomming new TECHNO WORLD. Being a part of that. <br> </p>
                     </a>
                 </div>
             </div>
@@ -132,7 +131,7 @@
                 <div class="column right">
                     <div class="info">
                         <a href="     " target="_blank" rel="noreferrer">
-                            <img src="source.gif" alt="HTML" width="80" />
+                            <img src="source.gif" alt="HTML" width="700" />
                         </a>
                         <!-- <a href="https://www.w3schools.com/Css/" target="_blank" rel="noreferrer">
                             <img src="./Images/css.png" alt="css" width="80" />
@@ -222,7 +221,8 @@
                         </div>
                     </a>
                     <a href=" " target="_blank" rel="noreferrer" title=" ">
-                        
+                      <div class="box">
+                            <img src="istockphoto-532548823-612x612.jpg" alt=" ">  
                     </a>
 
                     <p>  </p>
