--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@
                         </div>
                     </a>
                     <a href=" " target="_blank" rel="noreferrer" title=" ">
+                        <div class="box">
+                            <img src=".istockphoto-473257565-640x640.jpg" alt=" ">
+
                         
                     </a>
 
@@ -202,8 +205,9 @@
                 </div>
                 <div class="card">
                     <a href="h " target="_blank" rel="noreferrer" title=" ">
-                        <div class="box">
+                        <<div class="box">
                             <img src=".istockphoto-473257565-640x640.jpg" alt=" ">
+
 
                         </div>
                     </a>
@@ -221,8 +225,8 @@
                         </div>
                     </a>
                     <a href=" " target="_blank" rel="noreferrer" title=" ">
-                      <div class="box">
-                            <img src="istockphoto-532548823-612x612.jpg" alt=" ">  
+<!--                       <div class="box">
+                            <img src="istockphoto-532548823-612x612.jpg" alt=" ">   -->
                     </a>
 
                     <p>  </p>
