--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 <div class="text-2">Global Hospital</div>
                 <div class="text-3">Your Health is Our priority <span class="typing"></span>
                 </div>
-                <a class="web" href="#contact">Online Consultation <i class="fad fa-angle-right"></i>
+                <a class="web" href="https://akshay-appu.github.io/disease-drug/">Online Consultation <i class="fad fa-angle-right"></i>
                </a>
-                <a href="https://www.instagram.com/Unique_historiographer" target="_blank" rel="noreferrer">Hospital Staff <i class="fad fa-angle-right"></i>
+                <a href="https://akshay-appu.github.io/disease-drug/" target="_blank" rel="noreferrer">Hospital Staff <i class="fad fa-angle-right"></i>
                </a>
             </div>
         </div>
